# csh_grc

./: .gitmodules  build  configure  install  meson.build
src/: grc.c
